# MarkerPassingAlgorithm

./: .gitignore  README.md  pom.xml  pyproject.toml
MarkerPassingAlgorithm/: pom.xml
MarkerPassingAlgorithm/src/main/java/de/kimanufaktur/markerpassing/: Link.java  Marker.java  Node.java  ProcessingStep.java  SelectFiringNodesFunction.java  SpreadedMarkers.java  SpreadingAlgorithm.java  SpreadingStep.java  TerminationCondition.java
marker_passing/: __init__.py  in_function.py  link.py  marker.py  node.py  out_function.py  processing_step.py  select_firing_nodes_function.py  spreaded_markers.py  spreading_algorithm.py  spreading_step.py  termination_condition.py
marker_passing/gpu/: __init__.py  cuda_spreading_algorithm.py  graph_serializer.py
src/main/java/de/kimanufaktur/markerpassing/: InFunction.java  Link.java  Node.java  OutFunction.java  ProcessingStep.java  TerminationCondition.java
src/main/java/de/kimanufaktur/spreadalgo/: InFunction.java  Link.java  Marker.java  Node.java  OutFunction.java  ProcessingStep.java  SelectFiringNodesFunction.java  SpreadedMarkers.java  SpreadingAlgorithm.java  SpreadingStep.java  TerminationCondition.java
src/main/java/de/tuberlin/spreadalgo/: InFunction.java  Link.java  Marker.java  Node.java  OutFunction.java  ProcessingStep.java  SelectFiringNodesFunction.java  SpreadedMarkers.java  SpreadingAlgorithm.java  SpreadingStep.java  TerminationCondition.java
