[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "marker-passing"
version = "0.1.0"
description = "Generalised Marker Passing / Spreading Activation algorithm"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
dependencies = []

[project.optional-dependencies]
gpu = ["torch>=2.0"]

[tool.setuptools.packages.find]
include = ["marker_passing*"]
